Update repository URL in cloud-init and documentation files

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,6 +1,6 @@
 ---
 profile: edgeapp
-repo_url: ""
+repo_url: "https://github.com/SamuelMcAravey/infra-bootstrap.git"
 zerotier_network_id: ""
 cloudflare_tunnel_token: ""
 app_image: ""
