--- a/ansible/roles/zerotier/tasks/main.yml
+++ b/ansible/roles/zerotier/tasks/main.yml
@@ -85,7 +85,7 @@
   changed_when: false
   retries: 30
   delay: 2
-  until: zerotier_links.stdout is search('^\\d+: zt', multiline=True)
+  until: zerotier_links.stdout is search("^\\d+: zt", multiline=True)
 
 - name: Detect ZeroTier interface name
   ansible.builtin.set_fact:
